[tool.poetry]
name = "bus-tracker"
version = "0.1.0"
description = "playing with trio and websockets on educational purposes"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
trio-websocket = "^0.8.0"
flake8 = "^3.7.9"
mypy = "^0.761"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bus-tracker = "bus_tracker.server:main"
run-buses = "bus_tracker.buses.server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
