[tool.poetry]
name = "bus-tracker"
version = "0.1.0"
description = "playing with trio and websockets on educational purposes"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
trio-websocket = "^0.8.0"
asyncclick = "^7.0.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.761"

[tool.poetry.scripts]
bus-tracker = "bus_tracker.main:main"
emulator = "bus_tracker.emulator.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
