[tool.poetry]
name = "bus-tracker"
version = "0.1.0"
description = "playing with trio and websockets on educational purposes"
authors = ["Roman Bolkhovitin <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
trio-websocket = "^0.8.0"
asyncclick = "^7.0.9"
anyio = "1.2.1"  # 1.2.2 brokes asyncclick
dataclasses = { version = "*", python = "~3.6" }  # dataclasses backport


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.761"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-trio = "^0.5.2"

[tool.poetry.scripts]
bus-tracker = "bus_tracker.tracker.main:main"
emulator = "bus_tracker.emulator.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
